BMSSimplificationEclipseWS/EUFULL-Org-Backup/src/objects/Master_Parameter_BMS_CN__c.object
<CustomObject>
    <description>Master Parameter for China</description>
    <fields>
        <fullName>Country_Code_BMS_CN__c</fullName>
        <description>Country Code</description>
        <label>Country Code</label>
        <picklist>
            <picklistValues>
                <fullName>CN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IN</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Module_BMS_CN__c</fullName>
        <description>Function Module</description>
        <label>Module</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parameter_BMS_CN__c</fullName>
        <description>Parameter name</description>
        <label>Parameter</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type1_BMS_CN__c</fullName>
        <description>Type1</description>
        <label>Type1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type2_BMS_CN__c</fullName>
        <description>Type3</description>
        <label>Type2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value_BMS_CN__c</fullName>
        <description>Parameter Value</description>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Master Parameter</label>
    <nameField>
        <displayFormat>MP{000000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Master Parameters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>